external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_paren.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/let_binding_missing_paren.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_paren.move:3:21
  │
3 │         let (x1, x2 = (1, 2); // Test a missing right parenthesis
  │             -       ^ Expected ')'
  │             │        
  │             To match this '('

